@@ -4,7 +4,12 @@
 #include <vector>
 #include <string>
 
+#ifdef HAVE_CONFIG_H
+#include <config.h>
+#endif
+#ifdef USE_CXX_STD_NAMESPACE
 using namespace std;
+#endif
 
 /**
  * Case-insensitive string compare. Ignores preceding and 
