@@ -3,6 +3,13 @@
 
 #include <string>
 
+#ifdef HAVE_CONFIG_H
+#include <config.h>
+#endif
+#ifdef USE_CXX_STD_NAMESPACE
+using std::string;
+#endif
+
 /**
  * Provides services for allocating and reserving 
  * secure, temporary directories.
