@@ -4,6 +4,14 @@
 #include <string>
 #include <vector>
 
+#ifdef HAVE_CONFIG_H
+#include <config.h>
+#endif
+#ifdef USE_CXX_STD_NAMESPACE
+using std::string;
+using std::vector;
+#endif
+
 class ECA_SESSION;
 class ECA_CONTROL;
 
