@@ -5,6 +5,15 @@
 #include <string>
 #include <vector>
 
+#ifdef HAVE_CONFIG_H
+#include <config.h>
+#endif
+#ifdef USE_CXX_STD_NAMESPACE
+using std::map;
+using std::string;
+using std::vector;
+#endif
+
 #include "eca-error.h"
 
 /**
