@@ -5,6 +5,13 @@
 #include <map>
 #include <string>
 
+#ifdef HAVE_CONFIG_H
+#include <config.h>
+#endif
+#ifdef USE_CXX_STD_NAMESPACE
+using namespace std;
+#endif
+
 /**
  * Generic resource file class
  */
